# adversarial-interpretability

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  demo_game.json  probe.pkl  pyproject.toml  results.txt
configs/: README.md
environments/chess_probe/: README.md
environments/chess_probe/models/: probe_model.py  teacher_wrapper.py
environments/chess_probe/scripts/: eval_qwen_bc.py  teacher_server.py  train_action_value_probe.py  train_grpo_probe.py  train_qwen_bc.py  train_state_value.py
environments/chess_probe/train_utils/: common.py  reinforce.py
environments/diplomacy/gunboat/: train_probe.py
gamescope/environments/chess_probe/: TOKENIZATION_STRATEGY.md  __init__.py
gamescope/environments/chess_probe/models/: README.md  __init__.py  probe_model.py
gamescope/environments/chess_probe/scripts/: train_action_value_probe.py  train_grpo_probe.py  train_state_value.py
gamescope/environments/chess_probe/train_utils/: __init__.py  common.py  datasets.py  save_utils.py
gamescope/environments/diplomacy/: probe_inference.py  train_probe.py
gamescope/environments/diplomacy/maps/: treaty_of_verdun.map
gamescope/environments/diplomacy/tools/: vdip_to_map.py
gamescope/libs/run_utils/: __init__.py
gamescope/scripts/: config_runner.py  dummy_run.py
index/: runs_index.jsonl
libs/evals/: README.md
libs/probes/: README.md
libs/run_utils/: __init__.py
libs/visualization/: README.md
scripts/: README.md  config_runner.py  eval_qwen_bc.py  find_run.py  orchestrate_qwen_bc_eval.py  reindex_runs.py  train_qwen_bc.py
tests/: test_run_utils.py
