[project]
name = "adversarial-interpretability"
version = "0.0.0"
description = "Research repo"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "transformers",
  "tqdm",
  "peft",
  "PyYAML"
]

[tool.uv]
default-groups = []

[dependency-groups]
chess_probe = [
  "searchless-chess",
  "python-chess",
  "flax"
]

[tool.uv.sources]
searchless-chess = { path = "environments/chess_probe/vendor/searchless_chess" }


