[project]
name = "modelscope"
version = "0.0.0"
description = "Research repo"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "transformers",
  "tqdm",
  "peft",
  "PyYAML",
  "searchless-chess",
  "deepspeed>=0.17.6",
  "wandb>=0.22.1",
  "ipykernel>=6.30.1",
]

[tool.uv]
default-groups = []

[dependency-groups]
chess_probe = [
  "searchless-chess",
  "python-chess",
  "dm-haiku",
  "flax",
  "orbax-checkpoint",
  "chex",
  "jax[cuda12]>=0.6.2",
]

[tool.uv.sources]
searchless-chess = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "environments/chess_probe/vendor/searchless_chess",
]


