[project.scripts]
gamescope-diplomacy = "gamescope.environments.diplomacy.vendor.diplobench.main:main"
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamescope"
version = "0.0.0"
description = "Research repo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "transformers",
  "tqdm",
  "peft",
  "PyYAML",
  "deepspeed>=0.17.6",
  "wandb>=0.22.1",
  "ipykernel>=6.30.1",
  "seaborn>=0.13.2",
  "ml-collections>=1.1.0",
  "dm-env>=1.6",
  "immutabledict>=4.2.2",
  "scikit-learn>=1.7.2",
]

[project.optional-dependencies]
diplomacy = [
  "python-dotenv",
  "diplomacy>=1.1.2",
  "openai>=0.27.0",
]
chess = [
  "searchless-chess",
  "python-chess",
  "dm-haiku",
  "flax",
  "orbax-checkpoint",
  "chex",
  "jax[cuda12]>=0.6.2",
]
[tool.uv]
default-groups = []

## (legacy) dependency-groups removed in favor of project.optional-dependencies

[tool.uv.sources]
searchless-chess = { workspace = true, editable = true }

[tool.uv.workspace]
members = [
    "gamescope/environments/chess_probe/vendor/searchless_chess",
]

[tool.setuptools.packages.find]
include = ["gamescope*"]


